--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,16 @@
+buildscript{
+	ext{
+		springBootVersion = '2.6.4.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
+}
+
+
 plugins {
 	id 'org.springframework.boot' version '2.6.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -7,7 +20,6 @@ plugins {
 group = 'com.somosbooking'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
-
 
 repositories {
 	mavenCentral()
@@ -20,6 +32,8 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
