--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:mysql://localhost:3306/somosbooking
 spring.datasource.username=root
 spring.datasource.password=root
 
