--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=mysql://bd3b1eccd79db6:e1f592e7@us-cdbr-east-05.cleardb.net/heroku_6450df372195d2c?reconnect=true
 
 logging.level.org.hibernate.SQL=DEBUG
 
