--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=us-cdbr-east-05.cleardb.net
-spring.datasource.username = bd3b1eccd79db6
-spring.datasource.password = e1f592e7
+spring.datasource.url=${DATABASE_URL}
+
 
 logging.level.org.hibernate.SQL=DEBUG
 
