--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.url=
+spring.datasource.url=${DATABASE_URL}
 
-dataSource.setDriverClassName("com.mysql.cj.jdbc.Driver");
-dataSource.setUrl("jdbc:mysql://us-cdbr-east-05.cleardb.net/heroku_6450df372195d2c?reconnect=true");
-dataSource.setUsername("bd3b1eccd79db6");
-dataSource.setPassword("e1f592e7");
+logging.level.org.hibernate.SQL=DEBUG
 
