--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	runtimeOnly 'mysql:mysql-connector-java'
+	//runtimeOnly 'mysql:mysql-connector-java'
+	implementation 'org.postgresql:postgresql:42.3.3'
 	testImplementation 'org.mockito:mockito-core:4.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
