--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,14 @@ plugins {
 	id 'java'
 }
 
+jar {
+    manifest {
+        attributes (
+                'Main-Class': 'com.somosbooking.somosback.SomosBackApplication'
+        )
+    }
+}
+
 group = 'com.somosbooking'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
