--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,9 @@ plugins {
 	id 'java'
 }
 
-jar {
-    manifest {
-        attributes (
-                'Main-Class': 'com.somosbooking.somosback.SomosBackApplication'
-        )
-    }
+
+springBoot {
+    mainClass = "com.somosbooking.somosback.SomosBackApplication"
 }
 
 group = 'com.somosbooking'
