--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,14 @@ plugins {
 	id 'java'
 }
 
-
-springBoot {
-    mainClass = "com.somosbooking.somosback.SomosBackApplication"
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Quickstart',
+                   'Implementation-Version': version,
+                   'Main-Class': 'com.somosbooking.somosback.SomosBackApplication'
+    }
 }
+
 
 group = 'com.somosbooking'
 version = '0.0.1-SNAPSHOT'
