--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,10 @@ plugins {
 	id 'java'
 }
 
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
-                   'Implementation-Version': version,
-                   'Main-Class': 'com.somosbooking.somosback.SomosBackApplication'
-    }
-}
 
+springBoot {
+    mainClass = "com.somosbooking.somosback.SomosBackApplication"
+}
 
 group = 'com.somosbooking'
 version = '0.0.1-SNAPSHOT'
