--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ buildscript{
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Quickstart',
+                   'Implementation-Version': version,
+                   'Main-Class': 'com.somosbooking.somosback.SomosBackApplication'
+    }
+}
 }
 
 
@@ -17,10 +24,14 @@ plugins {
 	id 'java'
 }
 
-
-springBoot {
-    mainClass = "com.somosbooking.somosback.SomosBackApplication"
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Quickstart',
+                   'Implementation-Version': version,
+                   'Main-Class': 'com.somosbooking.somosback.SomosBackApplication'
+    }
 }
+
 
 group = 'com.somosbooking'
 version = '0.0.1-SNAPSHOT'
