--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
 jar {
     manifest {
         attributes (
-                   'Main-Class': 'com.somosbooking.somosback'
+                   'Main-Class': 'com.somosbooking.somosBack.SomosBackApplication'
 		)
     }
 }
