--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	implementation 'org.postgresql:postgresql:42.3.3'
+	implementation 'org.postgresql:postgresql'
 	testImplementation 'org.mockito:mockito-core:4.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
