--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/somosbooking
 spring.datasource.username=root
-spring.datasource.password=Pa$$w0rd
+spring.datasource.password=root
 
 
 logging.level.org.hibernate.SQL=DEBUG
